--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.12",
     "express": "^4.18.2",
+    "prompt-sync": "^4.2.0",
     "readline": "^1.3.0"
   }
 }
